fixes #3874. added transparency to spreadsheet input-completer-choices, to make rows behind visible

--- a/web/volume/spreadsheet.styl
+++ b/web/volume/spreadsheet.styl
@@ -36,6 +36,8 @@
       color white
     td.folder-type:hover
       cursor pointer
+    .input-completer-choices
+      background-color rgba(255,255,255,0.8)
 
 .spreadsheet-table
   width auto
